[package]
name = "echo"
version = "0.1.0"
authors = ["Kyle Harrison <kharrison@fortinet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
yaml-rust = "0.4"
regex = "1"